# identity.rs

./: 404.html  Cargo.toml  Glossary.html  contribute.html  index.html  print.html  searchindex.js  searchindex.json  welcome.html
docs/: index.md  iota-merkle-key-spec.md
identity/: Cargo.toml
identity_core/: Cargo.toml
identity_core/examples/: merkle_key.rs
identity_core/src/crypto/merkle_tree/: consts.rs  hash.rs  math.rs  merkle.rs  node.rs  proof.rs  tree.rs
identity_core/src/proof/: mod.rs
identity_iota/: Cargo.toml
identity_iota/examples/: client_create_document.rs  client_read_messages.rs  credential.rs  publish.rs  publish_read.rs  resolve.rs
identity_iota/src/: error.rs  lib.rs
identity_iota/src/client/: client.rs  mod.rs
identity_iota/src/client/actions/: mod.rs  publish_document.rs  read_document.rs  read_messages.rs  send_indexation.rs
identity_iota/src/did/: did.rs  document.rs
libraries/: index.html
libraries/diff/: Cargo.toml
libraries/diff/derive/: Cargo.toml
libraries/diff/derive/src/: impls.rs  lib.rs
libraries/diff/derive/src/internal/: attributes.rs  check.rs  container.rs  context.rs  mod.rs  symbol.rs
libraries/diff/src/: error.rs  impls.rs  json.rs  lib.rs
libraries/diff/src/traits/: diff.rs  diff_map.rs  diff_seq.rs  diff_struct.rs  diff_struct_variant.rs  diff_tuple.rs  diff_tuple_struct.rs  diff_tuple_variant.rs  differ.rs  mod.rs
libraries/diff/src/utils/: merge_join.rs  mod.rs  put_back.rs  zip_longest.rs
libraries/rust/: getting_started.html  index.html
libraries/wasm/: getting_started.html  index.html
meeting-notes/: index.html
overview/: did.html  index.html  vc.html
