[package]
name = "identity"
version = "0.1.0"
authors = ["IOTA Identity"]
edition = "2018"
description = "Building blocks for Self-sovereign Identity (SSI) (eg. Decentralized Identifiers/Verifiable Credentials)."
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "identity"]
homepage = "https://www.iota.org"

[dependencies]
identity-core = { version = "0.1.0", path = "../identity-core" }
identity-iota = { version = "0.1.0", path = "../identity-iota" }
